kubectl-deployments-yaml/nginx-clusterIP/nginx-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpack-ts-deployment-v1
  namespace: sample
spec:
  selector:
    matchLabels:
      app: webpack-ts-pod-v1
  replicas: 2
  template:
    metadata:
      labels:
        app: webpack-ts-pod-v1
    spec:
      containers:
        - name: webpack-ts-container
          image: webpack-ts-image-test:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: sample
spec:
  selector:
    app: webpack-ts-pod-v1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  namespace: sample
spec:
  ingressClassName: nginx
  rules:
    - host: webpack-ingress.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-server-service
                port:
                  number: 8080
